--- a/package.json
+++ b/package.json
@@ -9,16 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.1.2",
+    "@next/bundle-analyzer": "^12.2.3",
+    "@next/mdx": "^12.2.3",
+    "@react-three/drei": "^9.17.3",
+    "@react-three/fiber": "^8.2.2",
+    "glsl-curl-noise2": "^0.0.4",
+    "glsl-noise": "^0.0.0",
+    "glslify": "^7.1.1",
+    "glslify-loader": "^2.0.0",
+    "leva": "^0.9.29",
     "next": "12.2.3",
+    "next-compose-plugins": "^2.2.1",
+    "next-transpile-modules": "^9.0.0",
+    "path": "^0.12.7",
+    "raw-loader": "^4.0.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "three": "^0.142.0"
   },
   "devDependencies": {
     "@types/node": "18.6.1",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/three": "^0.142.0",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
   }
 }
